@@ -1,3 +1,6 @@
+Sat May 21 15:04:50 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/dblib/bcp.c: fix _bcp_get_term_var check
+
 Fri May 20 22:56:24 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* include/tds.h include/tdsodbc.h include/tdsproto.h:
 	* src/odbc/connectparams.c src/odbc/odbc.c src/tds/login.c:
@@ -252,4 +255,4 @@ Sat Apr  9 16:15:00 EDT 2011	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.91 added because of release
 
 $FreeTDS$
-$Id: ChangeLog,v 1.3254 2011-05-20 20:56:34 freddy77 Exp $
+$Id: ChangeLog,v 1.3255 2011-05-21 13:04:58 freddy77 Exp $
